--- a/theme.scss
+++ b/theme.scss
@@ -1,3 +1,4 @@
 /*-- scss:defaults --*/
 
-$presentation-heading-color: #00bf63 !default;
+$presentation-heading-color: #ff68b4 !default;
+$link-color: #ff68b4 !default;
